# rknn

./: README.md  test.py
yolov5/python/: inference.py
yolov8/c++/: CMakeLists.txt  main.cpp
yolov8/python/: inference.py  onnx2rknn.py
